<resources>
    <string name="app_name">IIRS Survey App</string>
    <string name="app_name_splash">IIRS\nSurvey App</string>

    <!-- Mapbox Access Token -->
    <string name="mapbox_access_token">pk.eyJ1IjoiYWJoaXNoZWsta2F0aGF5YXQiLCJhIjoiY2p3aXgzd24yMmttZDQ4bXE1bnFnODhlbiJ9.-WothtgOv3usLd4JI_H9bw</string>

    <!-- Permission Strings -->
    <string name="user_location_permission_explanation">Location Permission is required for the proper fuctioning of the app.</string>
    <string name="user_location_permission_not_granted">Location Permission has not been granted.</string>

    <!-- Other Strings -->
    <string name="layersdetails">Layers Detail</string>

    <!-- Population Strings -->
    <string name="wardno">Ward Number :</string>
    <string name="areatype">Area Type :</string>
    <string name="totalpeople">Total People :</string>
    <string name="totalmale">Total Males :</string>
    <string name="totalfemale">Total Females :</string>
    <string name="totalliteratepeople">Total Literate People :</string>
    <string name="totalliteratemales">Total Literate Males :</string>
    <string name="totalliteratefemales">Total Literate Females :</string>
    <string name="totalilliteratepeople">Total Illiterate People :</string>
    <string name="totalilliteratemales">Total Illiterate Males :</string>
    <string name="totalilliteratefemales">Total Illiterate Females :</string>
    <string name="totalworkingpeople">Total Working People :</string>
    <string name="totalworkingmales">Total Working Males :</string>
    <string name="totalworkingfemales">Total Working Females :</string>
    <string name="totalnonworkingpeople">Total Non-Working People :</string>
    <string name="totalnonworkingmales">Total Non-Working Males :</string>
    <string name="totalnonworkingfemales">Total Non-Working Females :</string>
</resources>
