<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/wardno_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wardno"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wardno_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/wardno_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/areatype_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wardno_content"
            android:layout_marginTop="10dp"
            android:text="@string/areatype"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/areatype_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wardno_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/areatype_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_people_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/areatype_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalpeople"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_people_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/areatype_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_people_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_male_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_people_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalmale"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_male_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_people_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_male_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_female_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_male_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalfemale"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_female_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_male_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_female_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_lit_people_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_female_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalliteratepeople"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_lit_people_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_female_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_lit_people_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_lit_male_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_lit_people_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalliteratemales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_lit_male_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_lit_people_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_lit_male_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_lit_female_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_lit_male_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalliteratefemales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_lit_female_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_lit_male_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_lit_female_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_ill_people_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_lit_female_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalilliteratepeople"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_ill_people_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_lit_female_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_ill_people_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_ill_male_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_ill_people_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalilliteratemales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_ill_male_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_ill_people_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_ill_male_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_ill_female_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_ill_male_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalilliteratefemales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_ill_female_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_ill_male_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_ill_female_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_work_people_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_ill_female_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalworkingpeople"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_work_people_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_ill_female_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_work_people_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_work_male_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_work_people_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalworkingmales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_work_male_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_work_people_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_work_male_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_work_female_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_work_male_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalworkingfemales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_work_female_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_work_male_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_work_female_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_nonwork_people_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_work_female_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalworkingpeople"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_nonwork_people_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_work_female_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_nonwork_people_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_nonwork_male_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_nonwork_people_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalnonworkingmales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_nonwork_male_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_nonwork_people_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_nonwork_male_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tot_nonwork_female_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_nonwork_male_content"
            android:layout_marginTop="10dp"
            android:text="@string/totalnonworkingfemales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tot_nonwork_female_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tot_nonwork_male_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tot_nonwork_female_head"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>